9/14/22bis
	Issue #20 - Implemented pencilmarks

9/14/22
	Issue #18 - Implemented block cage constraints
	Issue #19 - Implemented skyscraper constraints
	Fixed method names for keypad king and keypad knight lines
	Added additional tests
	
9/12/22bis
	Added support for parity dots (Thanks to BremSter for introducing me to these constraints.)
	Added support for parindrome lines
	Added a bunch of tests
	
9/12/22
	Issue #17 - implemented test harness support, and added test for global whispers
	Issue #11 - added support for max ascending constraints
	Issue #9 - added support for average lines
	Note: again thanks to the GAS setters at CtC Discord: clover, Philip and Sam for unearthing/developing the constraints implemented here

9/11/2022
	Implemented parity values (similar to modular values for mod 3) to ease implementation of parity based clues
	Issue #16 - added support for count-the-odds lines
	Issue #12 - added support for Rossini cluing, including the negative constraint
	Issue #13 - added support for corner/edge clues
	Issue #15 - added support for outside clues
	Issue #14 - added support for corner max under the "quad max value" name
	Issue #10 - added support for quad max arrows
	Issue #8 - added support for median cages
	Note: thanks to the GAS setters at CtC Discord: clover, Philip and Sam for mining numerous Sudoku variants, which comprise most of this push

9/10/2022
	Fixed Issue #4
	Fixed Issue #1 - added support for GSP
	Fixed Issue #5 - added support for multi-digit arrow sums
	Fixed Issue #6 - added support for genetics ruleset
	Fixed Issue #7 - added support for friendly cells
	Implemented several bug fixes affecting the negative Battenburg constraint and little killer cages found during development

9/4/2022
	Added support for shift lines
	Added support for up-and-down lines (alternately increase/decrease)
	Added support for neighbor sums
	Added support for run-on Renban lines

9/3/2022